--- a/index.html
+++ b/index.html
@@ -1,32 +1,95 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title> Cyril Tamine</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+  <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+<h1>Welcome on my webpage !</h1>
+
+<section>
+  <ul>
+    <a href="index.html#about"><li>About</li></a>
+    <a href="index.html#project"><li>Projects</li></a>
+    <a href="index.html#contact"><li>Contact</li></a>
+  </ul>
+
+</section>
+
+<section class="part" id="about">
+<h2>Who am I ?</h2>
+<p>My name is Cyril, I am studying Computer Science in Aix-en-Provence, France.
+  Feel free to explore this website and reach out if you need my help !
+
+</p>
+<button>About Me</button>
+</section>
+
+
+<section class="part" id="project">
+  <h2>My Projects</h2>
+  <h3>I did a lot of different projects during my years at university, here's some of them !</h3>
+  <p> Note : I got hacked on Github during the beginning of my second year. There are many projects where I am blacklisted.</p>
+  <section class="project">
+    <h4>Tile-matching game (C++)</h4>
+    <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
+    <button>Github</button>
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush">Github</a>
+  </section>
+
+  <section class="project">
+    <h4>Connected TVs</h4>
+    <p> A PHP Project created in order to manage the televisions of the different department in the IUT.</p>
+    <button>Github</button>
+
+    <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES">Github</a>
+  </section>
+
+  <section class="project">
+    <h4>Website for the IUT French Cup 2024</h4>
+    <p> A website created in order to promote the IUT French Cup 2024.</p>
+    <button>Github</button>
+
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin">IUT French Cup 2024</a>
+  </section>
+
+  <section class="project">
+    <h4>Tenders Website</h4>
+    <p>A PHP website created for every fan of tenders and raclette.</p>
+    <button>Github</button>
+
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01">Tenrac Lovers</a>
+  </section>
+</section>
+
+
+<section class="part" id="contact">
+  <h2>Contact</h2>
+  <button>Github</button>
+
+  <p>You can contact me on my <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/">LinkedIn</a> account !</p>
+  <button>taminecyril@gmail.com</button>
+
+</section>
+<footer>
+  <ul>
+    <a href="index.html#about"><li>About</li></a>
+    <a href="index.html#project"><li>Projects</li></a>
+    <a href="index.html#contact"><li>Contact</li></a>
+  </ul>
+
+  <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><img class="logo" src="img/linkedin.webp" alt="Linkedin's Logo"></a>
+  <p>Developed and designed by me.</p>
+
+
+</footer>
 
 </body>
 
