Ajout d'une nouvelle page.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -7,7 +7,7 @@
   <title> Cyril Tamine</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
-
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
