--- a/index.html
+++ b/index.html
@@ -16,28 +16,35 @@
 
 <section class="navbar" id="navbar">
   <ul>
-    <a href="index.html#navbar" class="left"><li>Cyril Tamine</li></a>
+    <a href="index.html#navbar" class="left"><li>Logo</li></a>
     <a href="index.html#about"><li>About</li></a>
+    <a href="index.html"><li>Home</li></a>
     <a href="index.html#project"><li>Projects</li></a>
     <a href="index.html#contact"><li>Contact</li></a>
   </ul>
 
 </section>
+<span class="big">TAMINE</span>
+<span class="little">Cyril</span>
+
+<hr>
 
 <section class="part" id="about">
-<h2>Who am I ?</h2>
-<p>My name is Cyril, I am studying Computer Science in Aix-en-Provence, France.
-  Feel free to explore this website and reach out if you need my help !
+<h2>About</h2>
+<p>My name is Cyril, I am studying Computer Science in Aix-en-Provence, in France.
+  I live in Marseille and I've always been passionate about studying many languages. I created this website in order
+  to do some frontend. You can find my works on GitHub.
 
 </p>
+
+
 <button>About Me</button>
 </section>
 
-
+<hr>
 <section class="part" id="project">
   <h2>My Projects</h2>
   <h3>I did a lot of different projects during my years at university, here's some of them !</h3>
-  <p> Note : I got hacked on Github during the beginning of my second year. There are many projects where I am blacklisted.</p>
   <section class="project">
     <h4>Tile-matching game (C++)</h4>
     <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
@@ -63,6 +70,7 @@
   </section>
 </section>
 
+<hr>
 
 <section class="part" id="contact">
   <h2>Contact</h2>
@@ -72,6 +80,9 @@
   <button>taminecyril@gmail.com</button>
 
 </section>
+
+<hr>
+
 <footer>
   <ul>
     <a href="index.html#about"><li>About</li></a>
