Rendu du site amélioré, on progresse.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Cyril Tamine</title>
+  <title>Cyril's Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
@@ -16,7 +16,7 @@
 
 <section class="navbar" id="navbar">
   <ul>
-    <a href="index.html#navbar" class="left"><li>Logo</li></a>
+    <a href="index.html" class="left"><li>TC</li></a>
     <a href="index.html#about"><li>About</li></a>
     <a href="index.html"><li>Home</li></a>
     <a href="index.html#project"><li>Projects</li></a>
@@ -24,14 +24,16 @@
   </ul>
 
 </section>
+
+<section class="nom">
 <span class="big">TAMINE</span>
 <span class="little">Cyril</span>
-
+</section>
 <hr>
 
 <section class="part" id="about">
 <h2>About</h2>
-<p>My name is Cyril, I am studying Computer Science in Aix-en-Provence, in France.
+<p class="description">My name is Cyril, I am studying Computer Science in Aix-en-Provence, in France.
   I live in Marseille and I've always been passionate about studying many languages. I created this website in order
   to do some frontend. You can find my works on GitHub.
 
@@ -52,19 +54,19 @@
   </section>
 
   <section class="project">
-    <h4>Connected TVs</h4>
+    <h3>Connected TVs</h3>
     <p> A PHP Project created in order to manage the televisions of the different department in the IUT.</p>
     <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>Github</button></a>
   </section>
 
   <section class="project">
-    <h4>Website for the IUT French Cup 2024</h4>
+    <h3>Website for the IUT French Cup 2024</h3>
     <p> A website created in order to promote the IUT French Cup 2024.</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>Github</button></a>
   </section>
 
   <section class="project">
-    <h4>Tenders Website</h4>
+    <h3>Tenders Website</h3>
     <p>A PHP website created for every fan of tenders and raclette.</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>Github</button></a>
   </section>
@@ -91,6 +93,7 @@
   </ul>
 
   <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><img class="logo" src="img/linkedin.webp" alt="Linkedin's Logo"></a>
+  <a href="https://github.com/Xanooo"><img class="logo" src="img/logo-github.png" alt="Github's Logo"> </a>
   <p>Developed and designed by me.</p>
 
 
