--- a/index.html
+++ b/index.html
@@ -46,27 +46,27 @@
 <hr>
 <section class="part" id="project">
   <h2>My Projects</h2>
-  <h3>I did a lot of different projects during my years at university, here's some of them !</h3>
+  <p>I did a lot of different projects during my years at university, here's some of them !</p>
   <section class="project">
-    <h4>Tile-matching game (C++)</h4>
+    <h2>Tile-matching game (C++)</h2>
     <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>Github</button></a>
   </section>
 
   <section class="project">
-    <h3>Connected TVs</h3>
+    <h2>Connected TVs</h2>
     <p> A PHP Project created in order to manage the televisions of the different department in the IUT.</p>
     <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>Github</button></a>
   </section>
 
   <section class="project">
-    <h3>Website for the IUT French Cup 2024</h3>
+    <h2>Website for the IUT French Cup 2024</h2>
     <p> A website created in order to promote the IUT French Cup 2024.</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>Github</button></a>
   </section>
 
   <section class="project">
-    <h3>Tenders Website</h3>
+    <h2>Tenders Website</h2>
     <p>A PHP website created for every fan of tenders and raclette.</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>Github</button></a>
   </section>
@@ -76,11 +76,21 @@
 
 <section class="part" id="contact">
   <h2>Contact</h2>
-  <a href="https://github.com/Xanooo"><button>My Github</button></a>
-
-  <p>You can contact me on my <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/">LinkedIn</a> account !</p>
+ <p>Thank you for visiting my portfolio! If you’d like to discuss a project, collaborate, or simply say hello,
+   feel free to reach out. I’m always excited to connect with new people and explore creative opportunities.</p>
   <button>taminecyril@gmail.com</button>
 
+  <p>Alternatively, you can use the contact form below to send me a message directly. I’ll do my best to respond
+    as soon as possible.</p>
+  <p>Stay connected and check out my latest updates on: </p>
+
+  <ul>
+    <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><button>LinkedIn</button></a>
+    <a href="https://github.com/Xanooo"><button>GitHub</button></a>
+  </ul>
+
+  <p>Feel free to let me know how I can assist you. Whether it’s a question, a suggestion, or a potential collaboration,
+    your input is valuable. Let's create something amazing together!</p>
 </section>
 
 <hr>
