Gros blabla sur ma vie sur la page About

--- a/about.html
+++ b/about.html
@@ -29,6 +29,26 @@ Since I was a child, I always wanted to work in digital [métiers]. At first, I 
 
 </p>
 
+<h1>Education</h1>
+<p>
+  I got my Baccaulaureate in Lycée Artaud in Marseille, with highest honour, specializing myself in Computer Science.
+</p>
+
+ <p>
+   I am currently at Aix-Marseille IUT on my second year of BUT Computing.
+ </p>
+
+<h1>Hobbies</h1>
+<p> I have so many hobbies I don't even have enough time to do everything ! I enjoy reading any kind of books, it
+could either be a novel, a manga, a comic and even plays ! Here's some of my favorite:</p>
+<p>Ashita no Joe | The Little Prince | Umineko no naku koro ni | Les Miserables | The Call of the Wild</p>
+
+<p>Of course, programming is one of the favorite thing I like to do on my computer; I like to create as
+much as I can : websites, games... as long as I have fun and I try something new. For this website, this is the
+first time I try to create a website for myself. Also, I really want to improve my CSS skills, and I'm trying to make
+this website good-looking.</p>
+
+
 
 
 </body>
