--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </p>
 
 
-<a href="./about.html"><button>About Me</button></a>
+<a href="./about.html"><button>Learn More</button></a>
 </section>
 
 <hr>
