Je continue à raconter ma vie dessus.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 
 <hr>
 <section class="part" id="project">
+
   <h2>My Projects</h2>
-  <p>I did a lot of different projects during my years at university, here's some of them !</p>
+
   <section class="project">
     <h2>Tile-matching game (C++)</h2>
     <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
@@ -70,6 +71,11 @@
     <p>A PHP website created for every fan of tenders and raclette.</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>Github</button></a>
   </section>
+
+  <button class="displayLeft" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="displayRight" onclick="plusDivs(1)">&#10095;</button>
+
+  <script src="js/slideshow.js"></script>
 </section>
 
 <hr>
