--- a/about.html
+++ b/about.html
@@ -39,15 +39,26 @@ Since I was a child, I always wanted to work in digital [métiers]. At first, I 
  </p>
 
 <h1>Hobbies</h1>
+<h2>Reading</h2>
 <p> I have so many hobbies I don't even have enough time to do everything ! I enjoy reading any kind of books, it
 could either be a novel, a manga, a comic and even plays ! Here's some of my favorite:</p>
 <p>Ashita no Joe | The Little Prince | Umineko no naku koro ni | Les Miserables | The Call of the Wild</p>
 
+<h2>Programming</h2>
 <p>Of course, programming is one of the favorite thing I like to do on my computer; I like to create as
 much as I can : websites, games... as long as I have fun and I try something new. For this website, this is the
 first time I try to create a website for myself. Also, I really want to improve my CSS skills, and I'm trying to make
 this website good-looking.</p>
 
+<h2>Drawing</h2>
+
+<h2>Playing Games</h2>
+<p>Video games is the main reason I wanted to study Computer Science. Even though I entered college, I still find time
+to play, either on my computer or my phone, here's some of my favorites games of all time !
+</p>
+<p>Minecraft | Tales of Berseria | Pokemon White 2 | Super Smash Bros Brawl</p>
+<h2>Learning</h2>
+<p></p>
 
 
 
