Je rajoute quelques trucs stylés que j'ai trouvé sur Internet.

--- a/about.html
+++ b/about.html
@@ -50,6 +50,22 @@ much as I can : websites, games... as long as I have fun and I try something new
 first time I try to create a website for myself. Also, I really want to improve my CSS skills, and I'm trying to make
 this website good-looking.</p>
 
+<h4>I learnt how to use : </h4>
+<section class="roller">
+<span id="rolltext">
+  HTML <br>
+  CSS <br>
+  PHP <br>
+  JavaScript <br>
+  Java <br>
+  SQL <br>
+  C++ <br>
+  Python <br>
+
+</span>
+</section>
+
+
 <h2>Drawing</h2>
 
 <h2>Playing Games</h2>
