--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>Github</button></a>
   </section>
 
-  <button class="displayLeft" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="displayRight" onclick="plusDivs(1)">&#10095;</button>
+  <button class="display" onclick="plusDivs(-1)">&#10094;  Previous</button>
+  <button class="display" onclick="plusDivs(1)">Next &#10095;</button>
 
   <script src="js/slideshow.js"></script>
 </section>
