--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
   <section class="project">
     <h2>Tile-matching game (C++)</h2>
     <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>Github</button></a>
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>Github Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Connected TVs</h2>
     <p> A PHP Project created in order to manage the televisions of the different department in the IUT.</p>
-    <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>Github</button></a>
+    <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>Github Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Website for the IUT French Cup 2024</h2>
     <p> A website created in order to promote the IUT French Cup 2024.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>Github</button></a>
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>Github Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Tenders Website</h2>
     <p>A PHP website created for every fan of tenders and raclette.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>Github</button></a>
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>Github Repository</button></a>
   </section>
 
   <button class="display" onclick="plusDivs(-1)">&#10094;  Previous</button>
