--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <section class="nom">
 <span class="big">TAMINE</span>
 <span class="little">Cyril</span>
+  <span class="dev">Computer Science Student.</span>
 </section>
 <hr>
 
@@ -35,7 +36,7 @@
 <h2>About</h2>
 <p class="description">My name is Cyril, I am studying Computer Science in Aix-en-Provence, in France.
   I live in Marseille and I've always been passionate about studying many languages. I created this website in order
-  to do some frontend. You can find my works on GitHub.
+  to do some frontend. You can find my works on GitHub. To learn more about me, click on the button below !
 
 </p>
 
@@ -51,25 +52,31 @@
   <section class="project">
     <h2>Tile-matching game (C++)</h2>
     <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>Github Repository</button></a>
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Connected TVs</h2>
-    <p> A PHP Project created in order to manage the televisions of the different department in the IUT.</p>
-    <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>Github Repository</button></a>
+    <p> A PHP Project created in order to manage the televisions of the different departments in the IUT.</p>
+    <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Website for the IUT French Cup 2024</h2>
     <p> A website created in order to promote the IUT French Cup 2024.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>Github Repository</button></a>
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Tenders Website</h2>
     <p>A PHP website created for every fan of tenders and raclette.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>Github Repository</button></a>
+    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>GitHub Repository</button></a>
+  </section>
+
+  <section class="project">
+    <h2>ETU Website</h2>
+    <p>A website created to group every IDE, websites et lectures useful to our BUT Computing.</p>
+    <a href="https://github.com/TORCHIN-Maxence-24020376/Site-ETU"><button>GitHub Repository</button></a>
   </section>
 
   <button class="display" onclick="plusDivs(-1)">&#10094;  Previous</button>
