Ajouts d'informations, et ajout de la page project. Je vais d'abord compléter le HTML avant d'attaquer le CSS.

--- a/about.html
+++ b/about.html
@@ -21,30 +21,35 @@
 </section>
 
 <h1>About Me </h1>
-<p>I was born in Marseille, France, the 11th May, 2005.
-Since I was a child, I always wanted to work in digital [métiers]. At first, I wanted to specialize myself in video
-  games, however, during my University Bachelor of Technology, I discovered many interesting domains in Programming :
-  PHP, Java, Python, C++, Databases. There are so many fields I want to try, so many languages I want to learn. I really
-  want to be a complete developer !
+<p>
+Since I was a child, I have always been drawn to digital professions. At first, I wanted to specialize myself in video
+  games, however, during my University Bachelor of Technology, I discovered many interesting fields in Programming :
+  Frontend, Backend, Java, Python, C++, Databases, AI. There are so many fields I want to try, so many languages
+  I want to learn. I really aspire to be a complete developer !
 
 </p>
 <hr>
 
 <h1>Education</h1>
 <p>
-  I got my Baccaulaureate in Lycée Artaud in Marseille, with highest honour, specializing myself in Computer Science.
+2021 - 2023
+  Lycée Artaud, France
+  Baccaulaureate in Computer Sciences
+  with highest honour
 </p>
 
  <p>
-   I am currently at Aix-Marseille IUT on my second year of BUT Computing.
+2023 - 2026
+   IUT Aix-Marseille, Aix-en-Provence
+   BUT Computing
  </p>
 <hr>
 
 <h1>Hobbies</h1>
 <h2>Reading</h2>
 <p> I have so many hobbies I don't even have enough time to do everything ! I enjoy reading any kind of books, it
-could either be a novel, a manga, a comic and even plays ! Here's some of my favorite:</p>
-<p>Ashita no Joe | The Little Prince | Umineko no naku koro ni | Les Miserables | The Call of the Wild</p>
+could either be a novel, a manga, a comic and even plays !
+</p>
 
 <h2>Programming</h2>
 <p>Of course, programming is one of the favorite thing I like to do on my computer; I like to create as
@@ -72,11 +77,8 @@ this website good-looking.</p>
 
 <h2>Playing Games</h2>
 <p>Video games is the main reason I wanted to study Computer Science. Even though I entered college, I still find time
-to play, either on my computer or my phone, here's some of my favorites games of all time !
-</p>
-<p>Minecraft | Tales of Berseria | Pokemon White 2 | Super Smash Bros Brawl</p>
-<h2>Learning</h2>
-<p></p>
+to play, either on my computer or my phone</p>
+
 
 
 
