--- a/index.html
+++ b/index.html
@@ -95,13 +95,6 @@
 
   <p>Alternatively, you can use the contact form below to send me a message directly. I’ll do my best to respond
     as soon as possible.</p>
-  <p>Stay connected and check out my latest updates on: </p>
-
-  <ul>
-    <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><button>LinkedIn</button></a>
-    <a href="https://github.com/Xanooo"><button>GitHub</button></a>
-  </ul>
-
   <p>Feel free to let me know how I can assist you. Whether it’s a question, a suggestion, or a potential collaboration,
     your input is valuable. Let's create something amazing together!</p>
 </section>
@@ -113,11 +106,12 @@
     <a href="index.html#about"><li>About</li></a>
     <a href="index.html#project"><li>Projects</li></a>
     <a href="index.html#contact"><li>Contact</li></a>
+    <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
+    <a href="https://github.com/Xanooo"><li>GitHub</li></a>
   </ul>
 
-  <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><img class="logo" src="img/linkedin.webp" alt="Linkedin's Logo"></a>
-  <a href="https://github.com/Xanooo"><img class="logo" src="img/logo-github.png" alt="Github's Logo"> </a>
-  <p>Developed and designed by me.</p>
+
+  <p>Cyril Tamine, 2025.</p>
 
 
 </footer>
