Ajouts d'informations, et ajout de la page project. Je vais d'abord compléter le HTML avant d'attaquer le CSS.

--- a/about.html
+++ b/about.html
@@ -79,8 +79,22 @@ this website good-looking.</p>
 <p>Video games is the main reason I wanted to study Computer Science. Even though I entered college, I still find time
 to play, either on my computer or my phone</p>
 
+<hr>
+
+<footer>
+  <ul>
+    <a href="index.html#about"><li>About</li></a>
+    <a href="index.html#project"><li>Projects</li></a>
+    <a href="index.html#contact"><li>Contact</li></a>
+    <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
+    <a href="https://github.com/Xanooo"><li>GitHub</li></a>
+  </ul>
 
 
+  <p>Cyril Tamine, 2025.</p>
+
+
+</footer>
 
 </body>
 </html>
