--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="index.html" class="left"><li>TC</li></a>
     <a href="index.html#about"><li>About</li></a>
     <a href="index.html"><li>Home</li></a>
-    <a href="index.html#project"><li>Projects</li></a>
+    <a href="project.html"><li>Projects</li></a>
     <a href="index.html#contact"><li>Contact</li></a>
   </ul>
 
@@ -44,46 +44,7 @@
 <a href="./about.html"><button>Learn More</button></a>
 </section>
 
-<hr>
-<section class="part" id="project">
 
-  <h2>My Projects</h2>
-
-  <section class="project">
-    <h2>Tile-matching game (C++)</h2>
-    <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>GitHub Repository</button></a>
-  </section>
-
-  <section class="project">
-    <h2>Connected TVs</h2>
-    <p> A PHP Project created in order to manage the televisions of the different departments in the IUT.</p>
-    <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>GitHub Repository</button></a>
-  </section>
-
-  <section class="project">
-    <h2>Website for the IUT French Cup 2024</h2>
-    <p> A website created in order to promote the IUT French Cup 2024.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>GitHub Repository</button></a>
-  </section>
-
-  <section class="project">
-    <h2>Tenders Website</h2>
-    <p>A PHP website created for every fan of tenders and raclette.</p>
-    <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>GitHub Repository</button></a>
-  </section>
-
-  <section class="project">
-    <h2>ETU Website</h2>
-    <p>A website created to group every IDE, websites et lectures useful to our BUT Computing.</p>
-    <a href="https://github.com/TORCHIN-Maxence-24020376/Site-ETU"><button>GitHub Repository</button></a>
-  </section>
-
-  <button class="display" onclick="plusDivs(-1)">&#10094;  Previous</button>
-  <button class="display" onclick="plusDivs(1)">Next &#10095;</button>
-
-  <script src="js/slideshow.js"></script>
-</section>
 
 <hr>
 
