--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <span class="big">TAMINE</span>
 <span class="little">Cyril</span>
   <span class="dev">Computer Science Student.</span>
+
 </section>
-<hr>
 
 <section class="part" id="about">
 <h2>About</h2>
@@ -60,17 +60,22 @@
     your input is valuable. Let's create something amazing together!</p>
 </section>
 
-<hr>
 
 <footer>
+
+  <section class="info">
   <ul>
     <a href="index.html#about"><li>About</li></a>
-    <a href="index.html#project"><li>Projects</li></a>
+    <a href="project.html"><li>Projects</li></a>
     <a href="index.html#contact"><li>Contact</li></a>
+
+  </ul>
+
+  <ul>
     <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
     <a href="https://github.com/Xanooo"><li>GitHub</li></a>
   </ul>
-
+  </section>
 
   <p>Cyril Tamine, 2025.</p>
 
