--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cyril's Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/slideshow.css">
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
 </head>
