Ajouts de toutes les pages, modification du CSS du footer et des projets.

--- a/about.html
+++ b/about.html
@@ -14,8 +14,10 @@
 <section class="navbar" id="navbar">
   <ul>
     <a href="index.html" class="left"><li>TC</li></a>
+    <a href="about.html"><li>About</li></a>
     <a href="index.html"><li>Home</li></a>
-
+    <a href="project.html"><li>Projects</li></a>
+    <a href="contact.html"><li>Contact</li></a>
   </ul>
 
 </section>
@@ -82,14 +84,17 @@ to play, either on my computer or my phone</p>
 <hr>
 
 <footer>
-  <ul>
-    <a href="index.html#about"><li>About</li></a>
-    <a href="index.html#project"><li>Projects</li></a>
-    <a href="index.html#contact"><li>Contact</li></a>
-    <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
-    <a href="https://github.com/Xanooo"><li>GitHub</li></a>
-  </ul>
-
+  <section class="info">
+    <ul>
+      <h2>Contact</h2>
+  
+    </ul>
+  
+    <ul>
+      <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
+      <a href="https://github.com/Xanooo"><li>GitHub</li></a>
+    </ul>
+    </section>
 
   <p>Cyril Tamine, 2025.</p>
 
