--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <section class="navbar" id="navbar">
   <ul>
     <a href="index.html" class="left"><li>TC</li></a>
-    <a href="index.html#about"><li>About</li></a>
+    <a href="about.html"><li>About</li></a>
     <a href="index.html"><li>Home</li></a>
     <a href="project.html"><li>Projects</li></a>
-    <a href="index.html#contact"><li>Contact</li></a>
+    <a href="contact.html"><li>Contact</li></a>
   </ul>
 
 </section>
@@ -31,6 +31,7 @@
   <span class="dev">Computer Science Student.</span>
 
 </section>
+<hr>
 
 <section class="part" id="about">
 <h2>About</h2>
@@ -41,7 +42,7 @@
 </p>
 
 
-<a href="./about.html"><button>Learn More</button></a>
+<a href="about.html"><button>Learn More</button></a>
 </section>
 
 
@@ -52,7 +53,7 @@
   <h2>Contact</h2>
  <p>Thank you for visiting my portfolio! If you’d like to discuss a project, collaborate, or simply say hello,
    feel free to reach out. I’m always excited to connect with new people and explore creative opportunities.</p>
-  <button>taminecyril@gmail.com</button>
+  <button><a href="mailto:taminecyril@gmail.com">taminecyril@gmail.com</a></button>
 
   <p>Alternatively, you can use the contact form below to send me a message directly. I’ll do my best to respond
     as soon as possible.</p>
@@ -60,14 +61,13 @@
     your input is valuable. Let's create something amazing together!</p>
 </section>
 
+<hr>
 
 <footer>
 
   <section class="info">
   <ul>
-    <a href="index.html#about"><li>About</li></a>
-    <a href="project.html"><li>Projects</li></a>
-    <a href="index.html#contact"><li>Contact</li></a>
+    <h2>Contact</h2>
 
   </ul>
 
@@ -77,7 +77,7 @@
   </ul>
   </section>
 
-  <p>Cyril Tamine, 2025.</p>
+  <p class="signature">Cyril Tamine, 2025.</p>
 
 
 </footer>
