--- a/project.html
+++ b/project.html
@@ -15,8 +15,10 @@
 <section class="navbar" id="navbar">
   <ul>
     <a href="index.html" class="left"><li>TC</li></a>
+    <a href="about.html"><li>About</li></a>
     <a href="index.html"><li>Home</li></a>
-
+    <a href="project.html"><li>Projects</li></a>
+    <a href="contact.html"><li>Contact</li></a>
   </ul>
 
 </section>
@@ -24,34 +26,40 @@
 <section class="part" id="project">
 
   <h2>My Projects</h2>
+  <p>I worked on many projects during my years at college, here's some of them !</p>
 
   <section class="project">
     <h2>Tile-matching game (C++)</h2>
     <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
+    <p><strong>Technologies :</strong> C++, YAML</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Connected TVs</h2>
     <p> A PHP Project created in order to manage the televisions of the different departments in the IUT.</p>
+    <p><strong>Technologies :</strong> PHP, JavaScript, MySQL, HTML, CSS</p>
     <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Website for the IUT French Cup 2024</h2>
     <p> A website created in order to promote the IUT French Cup 2024.</p>
+    <p><strong>Technologies :</strong> HTML, CSS</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Tenders Website</h2>
     <p>A PHP website created for every fan of tenders and raclette.</p>
+    <p><strong>Technologies :</strong> PHP, MySQL, CSS, HTML</p>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>ETU Website</h2>
     <p>A website created to group every IDE, websites et lectures useful to our BUT Computing.</p>
+    <p><strong>Technologies :</strong> HTML, CSS</p>
     <a href="https://github.com/TORCHIN-Maxence-24020376/Site-ETU"><button>GitHub Repository</button></a>
   </section>
 
@@ -63,14 +71,17 @@
 <hr>
 
 <footer>
-  <ul>
-    <a href="index.html#about"><li>About</li></a>
-    <a href="index.html#project"><li>Projects</li></a>
-    <a href="index.html#contact"><li>Contact</li></a>
-    <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
-    <a href="https://github.com/Xanooo"><li>GitHub</li></a>
-  </ul>
-
+  <section class="info">
+    <ul>
+      <h2>Contact</h2>
+  
+    </ul>
+  
+    <ul>
+      <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
+      <a href="https://github.com/Xanooo"><li>GitHub</li></a>
+    </ul>
+    </section>
 
   <p>Cyril Tamine, 2025.</p>
 
