--- a/about.html
+++ b/about.html
@@ -86,10 +86,10 @@ to play, either on my computer or my phone</p>
 <footer>
   <section class="info">
     <ul>
-      <h2>Contact</h2>
-  
+      Contact
+
     </ul>
-  
+
     <ul>
       <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
       <a href="https://github.com/Xanooo"><li>GitHub</li></a>
