--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,22 @@
 
 </section>
 
+<h2>Contact me ?</h2>
+<h3>Fill this form below :</h3>
+
+<form>
+  <label for="name">Name*: </label>
+<input type="text" name="name" id="name" placeholder="Your name" required />
+  <label for="mail">Email Address*: </label>
+  <input type="text" name="mail" id="mail" placeholder="Your email" required />
+  <label for="subject">Subject* : </label>
+  <input type="text" name="subject" id="subject" placeholder="Your subject" required />
+  <label for="msg">Message*: </label>
+  <textarea type="text" name="msg" id="msg" placeholder="Your message" required></textarea>
+  <input type="submit" value="Send">
+
+
+</form>
 <hr>
 
 <footer>
