Changement de la signature.

--- a/about.html
+++ b/about.html
@@ -96,7 +96,8 @@ to play, either on my computer or my phone</p>
     </ul>
     </section>
 
-  <p>Cyril Tamine, 2025.</p>
+  <p>© 2025 - Tous droits réservés.
+  </p>
 
 
 </footer>
