--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </ul>
   </section>
 
-  <p class="signature">Cyril Tamine, 2025.</p>
+  <p class="signature">© 2025 - Tous droits réservés.</p>
 
 
 </footer>
