--- a/project.html
+++ b/project.html
@@ -74,16 +74,17 @@
   <section class="info">
     <ul>
       <h2>Contact</h2>
-  
+
     </ul>
-  
+
     <ul>
       <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
       <a href="https://github.com/Xanooo"><li>GitHub</li></a>
     </ul>
     </section>
 
-  <p>Cyril Tamine, 2025.</p>
+  <p>© 2025 - Tous droits réservés.
+  </p>
 
 
 </footer>
