Refonte du site et de sa page d'accueil.

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cyril's Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/layout.css">
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
 </head>
@@ -22,6 +23,7 @@
 
 </section>
 
+<section class="content">
 <h1>About Me </h1>
 <p>
 Since I was a child, I have always been drawn to digital professions. At first, I wanted to specialize myself in video
@@ -80,27 +82,25 @@ this website good-looking.</p>
 <h2>Playing Games</h2>
 <p>Video games is the main reason I wanted to study Computer Science. Even though I entered college, I still find time
 to play, either on my computer or my phone</p>
+</section>
 
 <hr>
 
 <footer>
-  <section class="info">
-    <ul>
-      Contact
-
-    </ul>
-
-    <ul>
+  <section class="en-bas">
+    <section class="contact">
+      <h2>Contact</h2>
+      <a href="mailto:taminecyril@gmail.com"><li>taminecyril@gmail.com</li></a>
+    </section>
+    <section class="social">
+      <h2>Socials</h2>
       <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
       <a href="https://github.com/Xanooo"><li>GitHub</li></a>
-    </ul>
     </section>
+  </section>
 
-  <p>© 2025 - Tous droits réservés.
-  </p>
-
+  <p class="signature">© 2025 - Tous droits réservés.</p>
 
 </footer>
-
 </body>
 </html>
