--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cyril's Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/layout.css">
+
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
 </head>
@@ -22,8 +24,16 @@
 
 </section>
 
-<h2>Contact me ?</h2>
-<h3>Fill this form below :</h3>
+<section class="content">
+<p>Thank you for visiting my portfolio! If you’d like to discuss a project, collaborate, or simply say hello,
+  feel free to reach out. I’m always excited to connect with new people and explore creative opportunities.</p>
+
+<p>Alternatively, you can use the contact form below to send me a message directly. I’ll do my best to respond
+  as soon as possible.</p>
+<p>Feel free to let me know how I can assist you. Whether it’s a question, a suggestion, or a potential collaboration,
+  your input is valuable. Let's create something amazing together!</p>
+
+<h3>To reach out, fill this form below :</h3>
 
 <form>
   <label for="name">Name*: </label>
@@ -38,22 +48,24 @@
 
 
 </form>
+
+</section>
 <hr>
 
 <footer>
-    <section class="info">
-          <h2>Contact</h2>
+  <section class="en-bas">
+    <section class="contact">
+      <h2>Contact</h2>
+      <a href="mailto:taminecyril@gmail.com"><li>taminecyril@gmail.com</li></a>
+    </section>
+    <section class="social">
+      <h2>Socials</h2>
+      <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
+      <a href="https://github.com/Xanooo"><li>GitHub</li></a>
+    </section>
+  </section>
 
-
-        <ul>
-          <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
-          <a href="https://github.com/Xanooo"><li>GitHub</li></a>
-        </ul>
-        </section>
-
-  <p>© 2025 - Tous droits réservés.
-  </p>
-
+  <p class="signature">© 2025 - Tous droits réservés.</p>
 
 </footer>
 
