--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cyril's Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/index.css">
+
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
 </head>
 
 <body>
-
 
 
 <section class="navbar" id="navbar">
@@ -25,63 +26,15 @@
 
 </section>
 
-<section class="nom">
-<span class="big">TAMINE</span>
-<span class="little">Cyril</span>
-  <span class="dev">Computer Science Student.</span>
+
+<section class="banner">
+  <span class="nom" onmouseover="welcome()">Cyril T.</span>
+  <span class="student">Computer Sciences Student</span>
 
 </section>
-<hr>
-
-<section class="part" id="about">
-<h2>About</h2>
-<p class="description">My name is Cyril, I am studying Computer Science in Aix-en-Provence, in France.
-  I live in Marseille and I've always been passionate about studying many languages. I created this website in order
-  to do some frontend. You can find my works on GitHub. To learn more about me, click on the button below !
-
-</p>
 
 
-<a href="about.html"><button>Learn More</button></a>
-</section>
-
-
-
-<hr>
-
-<section class="part" id="contact">
-  <h2>Contact</h2>
- <p>Thank you for visiting my portfolio! If you’d like to discuss a project, collaborate, or simply say hello,
-   feel free to reach out. I’m always excited to connect with new people and explore creative opportunities.</p>
-  <button><a href="mailto:taminecyril@gmail.com">taminecyril@gmail.com</a></button>
-
-  <p>Alternatively, you can use the contact form below to send me a message directly. I’ll do my best to respond
-    as soon as possible.</p>
-  <p>Feel free to let me know how I can assist you. Whether it’s a question, a suggestion, or a potential collaboration,
-    your input is valuable. Let's create something amazing together!</p>
-</section>
-
-<hr>
-
-<footer>
-
-  <section class="info">
-  <ul>
-    <h2>Contact</h2>
-
-  </ul>
-
-  <ul>
-    <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
-    <a href="https://github.com/Xanooo"><li>GitHub</li></a>
-  </ul>
-  </section>
-
-  <p class="signature">© 2025 - Tous droits réservés.</p>
-
-
-</footer>
-
+<script src="js/intro.js"></script>
 </body>
 
 </html>
