--- a/project.html
+++ b/project.html
@@ -6,6 +6,8 @@
   <title>Cyril's Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/slideshow.css">
+  <link rel="stylesheet" href="css/layout.css">
+
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
 </head>
@@ -14,7 +16,7 @@
 
 <section class="navbar" id="navbar">
   <ul>
-    <a href="index.html" class="left"><li>TC</li></a>
+    <a href="index.html" class="left"><li class="nav-item active">TC</li></a>
     <a href="about.html"><li>About</li></a>
     <a href="index.html"><li>Home</li></a>
     <a href="project.html"><li>Projects</li></a>
@@ -22,6 +24,7 @@
   </ul>
 
 </section>
+
 
 <section class="part" id="project">
 
@@ -71,21 +74,19 @@
 <hr>
 
 <footer>
-  <section class="info">
-    <ul>
+  <section class="en-bas">
+    <section class="contact">
       <h2>Contact</h2>
-
-    </ul>
-
-    <ul>
+      <a href="mailto:taminecyril@gmail.com"><li>taminecyril@gmail.com</li></a>
+    </section>
+    <section class="social">
+      <h2>Socials</h2>
       <a href="https://www.linkedin.com/in/cyril-tamine-9068642b4/"><li>LinkedIn </li></a>
       <a href="https://github.com/Xanooo"><li>GitHub</li></a>
-    </ul>
     </section>
+  </section>
 
-  <p>© 2025 - Tous droits réservés.
-  </p>
-
+  <p class="signature">© 2025 - Tous droits réservés.</p>
 
 </footer>
 
