On retire des fichiers HTML et CSS, et on met le portfolio sur une seule page, en plus de la page contact.

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cyril's Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/layout.css">
-
+  <link rel="stylesheet" href="css/index.css">
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
 </head>
@@ -16,9 +14,9 @@
 <section class="navbar" id="navbar">
     <ul>
         <a href="index.html" class="left"><li>TC</li></a>
-        <a href="about.html"><li>About</li></a>
+        <a href="index.html#about"><li>About</li></a>
         <a href="index.html"><li>Home</li></a>
-        <a href="project.html"><li>Projects</li></a>
+        <a href="index.html#projet"><li>Projects</li></a>
         <a href="contact.html"><li>Contact</li></a>
       </ul>
 
