Modification drastique du site, changement de CSS. Fond de site définitif.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <ul>
     <a href="index.html" class="left"><li>TC</li></a>
     <a href="#about"><li>About</li></a>
-    <a href="index.html"><li>Home</li></a>
+    <a href="index.html#banner"><li>Home</li></a>
     <a href="#projet"><li>Projects</li></a>
     <a href="contact.html"><li>Contact</li></a>
   </ul>
@@ -33,64 +33,20 @@
 
 <section class="about" id="about">
   <h1>About Me </h1>
-  <p>
-    Since I was a child, I have always been drawn to digital professions. At first, I wanted to specialize myself in video
-    games, however, during my University Bachelor of Technology, I discovered many interesting fields in Programming :
-    Frontend, Backend, Java, Python, C++, Databases, AI. There are so many fields I want to try, so many languages
-    I want to learn. I really aspire to be a complete developer !
+  <p>Hello and welcome! I’m <strong>Cyril Tamine</strong>, a passionate <strong> developer </strong> with a strong drive to create, innovate, and share my knowledge.</p>
 
-  </p>
+  <h4>💡 My Journey</h4>
+  <p>I started my adventure in <strong>Lycée Antonin Artaud</strong>, where I built a solid foundation in <strong>computer sciences and mathematics</strong>. Over time, I worked on various projects, from <strong>developing games in Python</strong> to <strong>developing web application</strong>.</p>
 
-  <hr>
+  <h4>🚀 What I Do Today</h4>
+  <p>Currently, I <strong>am a student in IUT Aix-Marseille, in BUT Computing</strong>. My goal? <strong>To deliver innovative solutions tailored to every need.</strong> I love taking on new challenges, continuously learning, and sharing insights with the community.</p>
 
-  <h1>Education</h1>
-  <p>
-    2021 - 2023
-    Lycée Artaud, France
-    Baccaulaureate in Computer Sciences
-    with highest honour
-  </p>
+  <h4>🎯 Why This Website?</h4>
+  <p>This website is a space where I share <strong>my projects, experiences, and ideas</strong>. Whether you’re here to explore my work, discuss a project, or simply find inspiration, you’re in the right place!</p>
 
-  <p>
-    2023 - 2026
-    IUT Aix-Marseille, Aix-en-Provence
-    BUT Computing
-  </p>
-  <hr>
-
-  <h1>Hobbies</h1>
-  <h2>Reading</h2>
-  <p> I have so many hobbies I don't even have enough time to do everything ! I enjoy reading any kind of books, it
-    could either be a novel, a manga, a comic and even plays !
-  </p>
-
-  <h2>Programming</h2>
-  <p>Of course, programming is one of the favorite thing I like to do on my computer; I like to create as
-    much as I can : websites, games... as long as I have fun and I try something new. For this website, this is the
-    first time I try to create a website for myself. Also, I really want to improve my CSS skills, and I'm trying to make
-    this website good-looking.</p>
-
-  <h4>I learnt how to use : </h4>
-  <section class="roller">
-<span id="rolltext">
-  HTML <br>
-  CSS <br>
-  PHP <br>
-  JavaScript <br>
-  Java <br>
-  SQL <br>
-  C++ <br>
-  Python <br>
-
-</span>
-  </section>
-
-
-  <h2>Drawing</h2>
-
-  <h2>Playing Games</h2>
-  <p>Video games is the main reason I wanted to study Computer Science. Even though I entered college, I still find time
-    to play, either on my computer or my phone</p>
+  <h4>📩 Let’s Connect!</h4>
+  <p>Feel free to reach out via <a href="taminecyril@gmail.com">taminecyril@gmail.com
+    </a> or connect with me on <a href="[your LinkedIn URL]">LinkedIn</a>. I’d love to chat and explore new opportunities together!</p>
 
 <hr>
 </section>
@@ -103,35 +59,57 @@
   <section class="project">
     <h2>Tile-matching game (C++)</h2>
     <p> A tile-matching game made with C++ and the library MinGL2.0, created by students in the IUT.</p>
-    <p><strong>Technologies :</strong> C++, YAML</p>
+<ul class="technologies">
+  <li>C++</li>
+  <li>YAML</li>
+</ul>
+
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAECandyCrush"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Connected TVs</h2>
     <p> A PHP Project created in order to manage the televisions of the different departments in the IUT.</p>
-    <p><strong>Technologies :</strong> PHP, JavaScript, MySQL, HTML, CSS</p>
+    <ul class="technologies">
+      <li>PHP</li>
+      <li>JavaScript</li>
+      <li>MySQL</li>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
     <a href="https://github.com/ODERZO-Flavio-2326083b/SAE_TV_CONNECTEES"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Website for the IUT French Cup 2024</h2>
     <p> A website created in order to promote the IUT French Cup 2024.</p>
-    <p><strong>Technologies :</strong> HTML, CSS</p>
+    <ul class="technologies">
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/SAEBesoin"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>Tenders Website</h2>
     <p>A PHP website created for every fan of tenders and raclette.</p>
-    <p><strong>Technologies :</strong> PHP, MySQL, CSS, HTML</p>
+    <ul class="technologies">
+      <li>PHP</li>
+      <li>MySQL</li>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
     <a href="https://github.com/RIGAT-Pierre-andre-2326090par/Projet-Php_R3.01"><button>GitHub Repository</button></a>
   </section>
 
   <section class="project">
     <h2>ETU Website</h2>
     <p>A website created to group every IDE, websites et lectures useful to our BUT Computing.</p>
-    <p><strong>Technologies :</strong> HTML, CSS</p>
+    <ul class="technologies">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
     <a href="https://github.com/TORCHIN-Maxence-24020376/Site-ETU"><button>GitHub Repository</button></a>
   </section>
 
