--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cyril's Portfolio</title>
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/contact.css">
   <meta name="description" content="A website made by Cyril T., studying Computer Sciences in AMU.">
 
 </head>
@@ -23,6 +24,7 @@
 </section>
 
 <section class="content">
+  <section class="contact">
 <p>Thank you for visiting my portfolio! If you’d like to discuss a project, collaborate, or simply say hello,
   feel free to reach out. I’m always excited to connect with new people and explore creative opportunities.</p>
 
@@ -31,9 +33,9 @@
 <p>Feel free to let me know how I can assist you. Whether it’s a question, a suggestion, or a potential collaboration,
   your input is valuable. Let's create something amazing together!</p>
 
-<h3>To reach out, fill this form below :</h3>
-
+  </section>
 <form>
+  <p>To reach out, fill this form below :</p>
   <label for="name">Name*: </label>
 <input type="text" name="name" id="name" placeholder="Your name" required />
   <label for="mail">Email Address*: </label>
@@ -41,7 +43,7 @@
   <label for="subject">Subject* : </label>
   <input type="text" name="subject" id="subject" placeholder="Your subject" required />
   <label for="msg">Message*: </label>
-  <textarea type="text" name="msg" id="msg" placeholder="Your message" required></textarea>
+  <textarea name="msg" id="msg" placeholder="Your message" required></textarea>
   <input type="submit" value="Send">
 
 
