Modification dans le CSS et ajouts d'animations.

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,8 @@
 <hr>
 
 <footer>
+  <h2>Cyril Tamine</h2>
+
   <section class="en-bas">
     <section class="contact">
       <h2>Contact</h2>
@@ -55,7 +57,7 @@
     </section>
   </section>
 
-  <p class="signature">© 2025 - Tous droits réservés.</p>
+  <p class="signature">© 2025 - All right reserved</p>
 
 </footer>
 
